--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: UC-AWDU
-UC Academic Workers for a Democratic Union
+subtitle: UC Academic Workers for a Democratic Union
 ---
