--- a/getinvolved.html
+++ b/getinvolved.html
@@ -3,4 +3,4 @@ layout: page
 title: 'Get Involved in UC-AWDU'
 ---
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScPHAiLxoOCBq4CC6gES7Lm66zL5AU7ClpVOnHegUSgRkpfIQ/viewform?embedded=true" width="80%" height="882" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScPHAiLxoOCBq4CC6gES7Lm66zL5AU7ClpVOnHegUSgRkpfIQ/viewform?embedded=true" width="100vw" height="882" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
