--- a/la.html
+++ b/la.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to https://discord.gg/tmpWxKy7eQ</title>
-<meta http-equiv="refresh" content="0;" URL="https://discord.gg/tmpwxky7eq.redirect.center">
-<link rel="canonical" href="https://discord.gg/tmpwxky7eq.redirect.center">
+<meta http-equiv="refresh" content="0;" URL="https://discord.gg/tmpwxky7eq">
+<link rel="canonical" href="https://discord.gg/tmpwxky7eq">
