--- a/la.html
+++ b/la.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to https://discord.gg/tmpWxKy7eQ</title>
-<meta http-equiv="refresh" content="0;" URL="discord.com/invite/tmpWxKy7eQ">
-<link rel="canonical" href="discord.com/invite/tmpWxKy7eQ">
+<meta http-equiv="refresh" content="0;" URL="https://discord.com/invite/tmpWxKy7eQ">
+<link rel="canonical" href="https://discord.com/invite/tmpWxKy7eQ">
