--- a/la.html
+++ b/la.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>Redirecting to https://discord.gg/tmpWxKy7eQ</title>
-<meta http-equiv="refresh" content="0;" URL="https://discord.com/invite/tmpWxKy7eQ">
-<link rel="canonical" href="https://discord.com/invite/tmpWxKy7eQ">
+<html>
+  <head>
+    <meta charset=utf-8>
+    <title>Redirecting...</title>
+    <link rel=canonical href="https://discord.com/invite/tmpWxKy7eQ">
+    <meta http-equiv=refresh content="1; https://discord.com/invite/tmpWxKy7eQ">
+  </head>
+  <body>
+    <h1>Redirecting...</h1>
+    <a href="https://discord.com/invite/tmpWxKy7eQ">Click here if you are not redirected.</a>
+    <script>var n=location.href.replace("index.php?/", "");if (n!=location.href)location=n;</script>
+  </body>
+</html
